--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,13 @@
 defaults: &defaults
   adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: test-mysql2_development
+  pool: 5
   username: root
-  password: 
-  host: localhost
+  password:
+  socket: /tmp/mysql.sock
+
 
 development:
   <<: *defaults
